--- a/shop-item.html
+++ b/shop-item.html
@@ -30,11 +30,11 @@
         <ul>
           <li><a href="#">О нас</a></li>
           <li><a href="#">Игровые консоли</a></li>
-          <li><a href="#">Игры</a></li>
+          <li><a href="shop.html">Игры</a></li>
           <li><a href="#">Аксессуары</a></li>
           <li><a href="#">Распродажа</a></li>
           <li><a href="#">Блог</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
         </ul>
       </nav>
       <div class="banner"></div>
