Revert "Перелинковал страницы"
This reverts commit 20be77ac1d8ffb03bc4593e0fa904658f73d1847.

--- a/contacts.html
+++ b/contacts.html
@@ -70,7 +70,7 @@
         <ul>
           <li><a href="#">О нас</a></li>
           <li><a href="#">Игровые консоли</a></li>
-          <li><a href="shop.html">Игры</a></li>
+          <li><a href="#">Игры</a></li>
           <li><a href="#">Аксессуары</a></li>
           <li><a href="#">Распродажа</a></li>
           <li><a href="#">Блог</a></li>
