--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <ul>
           <li><a href="#">О нас</a></li>
           <li><a href="#">Игровые консоли</a></li>
-          <li><a href="shop.html">Игры</a></li>
+          <li><a href="#">Игры</a></li>
           <li><a href="#">Аксессуары</a></li>
           <li><a href="#">Распродажа</a></li>
           <li><a href="#">Блог</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <div class="banner"></div>
@@ -62,7 +62,7 @@
         <section class="catalog-section">
           <h2>Новинки</h2>
           <article class="catalog-item">
-            <a class="clearfix" href="shop-item.html">
+            <a class="clearfix" href="#">
               <img src="img/uncharted4.jpg" width="250" height="235" alt="Uncharted 4: A Thief's End">
               <h1>Uncharted&nbsp;4: A&nbsp;Thief&rsquo;s End</h1>
               <div class="item-price">
