--- a/shop.html
+++ b/shop.html
@@ -34,7 +34,7 @@
           <li><a href="#">Аксессуары</a></li>
           <li><a href="#">Распродажа</a></li>
           <li><a href="#">Блог</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <div class="banner"></div>
@@ -47,7 +47,7 @@
       </div>
       <section class="catalog">
         <article class="catalog-item">
-          <a class="clearfix" href="shop-item.html">
+          <a class="clearfix" href="#">
             <img src="img/uncharted4.jpg" width="250" height="235" alt="Uncharted 4: A Thief's End">
             <h1>Uncharted&nbsp;4: A&nbsp;Thief&rsquo;s End</h1>
             <div class="item-price">
