--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <ul>
           <li><a href="#">О нас</a></li>
           <li><a href="#">Игровые консоли</a></li>
-          <li><a href="#">Игры</a></li>
+          <li><a href="shop.html">Игры</a></li>
           <li><a href="#">Аксессуары</a></li>
           <li><a href="#">Распродажа</a></li>
           <li><a href="#">Блог</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
         </ul>
       </nav>
       <div class="banner"></div>
@@ -71,7 +71,7 @@
             </a>
           </article>
           <article class="catalog-item">
-            <a class="clearfix" href="#">
+            <a class="clearfix" href="shop-item.html">
               <img src="img/ps4-uncharted4.jpg" width="250" height="235" alt="PS4 Uncharted 4 Edition">
               <h1>PS4 Uncharted&nbsp;4 Edition</h1>
               <div class="item-price">
